# tennis-probability

./: .buildinfo  .gitignore  LICENSE  README.md  README.rst  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: sphinx.yml
_sources/api/: tennis_probability.InvalidInput.rst.txt  tennis_probability.game.rst.txt  tennis_probability.match.rst.txt  tennis_probability.set.rst.txt
api/: tennis_probability.InvalidInput.html  tennis_probability.InvalidProbability.html  tennis_probability.NegativeNumber.html  tennis_probability.find_p.html  tennis_probability.game.html  tennis_probability.match.html  tennis_probability.set.html
docs/: conf.py  index.rst
docs/source/: conf.py  index.rst
docs/source/api/: tennis_probability.InvalidProbability.rst  tennis_probability.NegativeNumber.rst  tennis_probability.find_p.rst
tennis_probability/: __init__.py  check.py  errors.py  find_p.py  game.py  match.py  set.py  tennis_probability.py
tests/: test_find_p.py  test_game.py  test_match.py  test_set.py  test_tennis_probability.py
