[tool.poetry]
name = "tennis-probability"
version = "0.1.0"
description = "Recursively calculates the probability of winning a tennis match"
authors = ["Max Larsson <maxslarsson@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
mypy = "^1.7.1"
sphinx = "^7.2.6"
sphinx-automodapi = "^0.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
